# superstore-eda-case-study

./: FInal_Report.md  SuperstoreEDACaseStudy_1707.ipynb  cleaned_superstore_data.csv  main-v2.py  main.py  pyproject.toml
